# azenta_driver_ros2_wrapper

./: .gitignore  README.md  webcam_pub.py  webcam_sub.py
azenta_driver/: README.md  peeler_client.py
azenta_driver/peeler_ros_client/: setup.cfg  setup.py
azenta_driver/peeler_ros_client/peeler_ros_client/: publish_peeler_state.py
azenta_driver/peeler_ros_controller/: setup.cfg
azenta_driver/peeler_utils/srv/: AddWorkPeeler.srv
azenta_module/: peeler_client.py
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros2_peeler_driver/share/ros2_peeler_driver/: package.sh
install/ros2_sealer_driver/share/ros2_sealer_driver/: package.sh  package.xml
log/: latest_build
peeler_driver/peeler_ros_client/: package.xml
peeler_driver/peeler_ros_client/peeler_ros_client/: peeling_api.py
peeler_driver/peeler_ros_controller/: package.xml  setup.py
peeler_driver/peeler_ros_controller/launch/: peeler_controller.launch.py
peeler_driver/peeler_ros_controller/peeler_controller/: peeler_controller.py
ros2_peeler_driver/: package.xml  setup.py
ros2_peeler_driver/ros2_peeler_driver/: cameraNode.py  masterNode.py  peelerNode.py
ros2_peeler_driver/ros2_peeler_driver/drivers/: peeler_client.py
ros2_peeler_driver/services/: testDesc.py
ros2_sealer_driver/ros2_sealer_driver/: sealerNode.py
services/: peelerDesc.srv
