<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>peeler_controller</name>
  <version>0.0.1</version>
  <description>This package is responsible for housing the peeler nodes.</description>
  <maintainer email="dozgulbas@anl.gov">Doga Ozgulbas</maintainer>
  <license>MIT License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>workcell_interfaces</exec_depend>
  <exec_depend>peeler_workcell_manager_client</exec_depend>
  <exec_depend>arm_client</exec_depend>
  <exec_depend>peeler_client</exec_depend>
  <!--<exec_depend>database</exec_depend>-->
  <exec_depend>peeler_driver_pkg</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
